# cmake-vala

./: UseVala.cmake
test/: .gitignore  CMakeLists.txt  libtest1.vala  libtest2.vala  test.vala
